@@ -65,6 +65,10 @@ class|class
 name|FunctionInfo
 block|{
 specifier|private
+name|boolean
+name|isNative
+decl_stmt|;
+specifier|private
 name|String
 name|displayName
 decl_stmt|;
@@ -136,6 +140,50 @@ name|genericUdfClass
 parameter_list|)
 block|{
 name|this
+argument_list|(
+literal|true
+argument_list|,
+name|displayName
+argument_list|,
+name|udfClass
+argument_list|,
+name|genericUdfClass
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|FunctionInfo
+parameter_list|(
+name|boolean
+name|isNative
+parameter_list|,
+name|String
+name|displayName
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|UDF
+argument_list|>
+name|udfClass
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|GenericUDF
+argument_list|>
+name|genericUdfClass
+parameter_list|)
+block|{
+name|this
+operator|.
+name|isNative
+operator|=
+name|isNative
+expr_stmt|;
+name|this
 operator|.
 name|displayName
 operator|=
@@ -180,6 +228,35 @@ name|GenericUDAFResolver
 name|genericUDAFResolver
 parameter_list|)
 block|{
+name|this
+argument_list|(
+literal|true
+argument_list|,
+name|displayName
+argument_list|,
+name|genericUDAFResolver
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|FunctionInfo
+parameter_list|(
+name|boolean
+name|isNative
+parameter_list|,
+name|String
+name|displayName
+parameter_list|,
+name|GenericUDAFResolver
+name|genericUDAFResolver
+parameter_list|)
+block|{
+name|this
+operator|.
+name|isNative
+operator|=
+name|isNative
+expr_stmt|;
 name|this
 operator|.
 name|displayName
@@ -312,6 +389,15 @@ parameter_list|()
 block|{
 return|return
 name|displayName
+return|;
+block|}
+specifier|public
+name|boolean
+name|isNative
+parameter_list|()
+block|{
+return|return
+name|isNative
 return|;
 block|}
 block|}
