@@ -2113,8 +2113,88 @@ block|}
 specifier|public
 specifier|static
 name|void
+name|registerTemporaryUDF
+parameter_list|(
+name|String
+name|functionName
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|UDF
+argument_list|>
+name|UDFClass
+parameter_list|,
+name|FunctionInfo
+operator|.
+name|OperatorType
+name|opt
+parameter_list|,
+name|boolean
+name|isOperator
+parameter_list|)
+block|{
+name|registerUDF
+argument_list|(
+literal|false
+argument_list|,
+name|functionName
+argument_list|,
+name|UDFClass
+argument_list|,
+name|opt
+argument_list|,
+name|isOperator
+argument_list|)
+expr_stmt|;
+block|}
+specifier|static
+name|void
 name|registerUDF
 parameter_list|(
+name|String
+name|functionName
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|UDF
+argument_list|>
+name|UDFClass
+parameter_list|,
+name|FunctionInfo
+operator|.
+name|OperatorType
+name|opt
+parameter_list|,
+name|boolean
+name|isOperator
+parameter_list|)
+block|{
+name|registerUDF
+argument_list|(
+literal|true
+argument_list|,
+name|functionName
+argument_list|,
+name|UDFClass
+argument_list|,
+name|opt
+argument_list|,
+name|isOperator
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+specifier|static
+name|void
+name|registerUDF
+parameter_list|(
+name|boolean
+name|isNative
+parameter_list|,
 name|String
 name|functionName
 parameter_list|,
@@ -2153,6 +2233,8 @@ init|=
 operator|new
 name|FunctionInfo
 argument_list|(
+name|isNative
+argument_list|,
 name|functionName
 operator|.
 name|toLowerCase
@@ -2309,6 +2391,32 @@ throw|;
 block|}
 block|}
 specifier|public
+specifier|static
+name|void
+name|registerTemporaryGenericUDF
+parameter_list|(
+name|String
+name|functionName
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|GenericUDF
+argument_list|>
+name|genericUDFClass
+parameter_list|)
+block|{
+name|registerGenericUDF
+argument_list|(
+literal|false
+argument_list|,
+name|functionName
+argument_list|,
+name|genericUDFClass
+argument_list|)
+expr_stmt|;
+block|}
 specifier|static
 name|void
 name|registerGenericUDF
@@ -2325,6 +2433,36 @@ argument_list|>
 name|genericUDFClass
 parameter_list|)
 block|{
+name|registerGenericUDF
+argument_list|(
+literal|true
+argument_list|,
+name|functionName
+argument_list|,
+name|genericUDFClass
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+specifier|static
+name|void
+name|registerGenericUDF
+parameter_list|(
+name|boolean
+name|isNative
+parameter_list|,
+name|String
+name|functionName
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|GenericUDF
+argument_list|>
+name|genericUDFClass
+parameter_list|)
+block|{
 if|if
 condition|(
 name|GenericUDF
@@ -2343,6 +2481,8 @@ init|=
 operator|new
 name|FunctionInfo
 argument_list|(
+name|isNative
+argument_list|,
 name|functionName
 argument_list|,
 literal|null
@@ -3260,8 +3400,54 @@ block|}
 specifier|public
 specifier|static
 name|void
+name|registerTemporaryGenericUDAF
+parameter_list|(
+name|String
+name|functionName
+parameter_list|,
+name|GenericUDAFResolver
+name|genericUDAFResolver
+parameter_list|)
+block|{
+name|registerGenericUDAF
+argument_list|(
+literal|false
+argument_list|,
+name|functionName
+argument_list|,
+name|genericUDAFResolver
+argument_list|)
+expr_stmt|;
+block|}
+specifier|static
+name|void
 name|registerGenericUDAF
 parameter_list|(
+name|String
+name|functionName
+parameter_list|,
+name|GenericUDAFResolver
+name|genericUDAFResolver
+parameter_list|)
+block|{
+name|registerGenericUDAF
+argument_list|(
+literal|true
+argument_list|,
+name|functionName
+argument_list|,
+name|genericUDAFResolver
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+specifier|static
+name|void
+name|registerGenericUDAF
+parameter_list|(
+name|boolean
+name|isNative
+parameter_list|,
 name|String
 name|functionName
 parameter_list|,
@@ -3281,6 +3467,8 @@ argument_list|,
 operator|new
 name|FunctionInfo
 argument_list|(
+name|isNative
+argument_list|,
 name|functionName
 operator|.
 name|toLowerCase
@@ -3294,8 +3482,64 @@ block|}
 specifier|public
 specifier|static
 name|void
+name|registerTemporaryUDAF
+parameter_list|(
+name|String
+name|functionName
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|UDAF
+argument_list|>
+name|udafClass
+parameter_list|)
+block|{
+name|registerUDAF
+argument_list|(
+literal|false
+argument_list|,
+name|functionName
+argument_list|,
+name|udafClass
+argument_list|)
+expr_stmt|;
+block|}
+specifier|static
+name|void
 name|registerUDAF
 parameter_list|(
+name|String
+name|functionName
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|UDAF
+argument_list|>
+name|udafClass
+parameter_list|)
+block|{
+name|registerUDAF
+argument_list|(
+literal|true
+argument_list|,
+name|functionName
+argument_list|,
+name|udafClass
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+specifier|static
+name|void
+name|registerUDAF
+parameter_list|(
+name|boolean
+name|isNative
+parameter_list|,
 name|String
 name|functionName
 parameter_list|,
@@ -3320,6 +3564,8 @@ argument_list|,
 operator|new
 name|FunctionInfo
 argument_list|(
+name|isNative
+argument_list|,
 name|functionName
 operator|.
 name|toLowerCase
@@ -3347,12 +3593,42 @@ block|}
 specifier|public
 specifier|static
 name|void
-name|unregisterUDF
+name|unregisterTemporaryUDF
 parameter_list|(
 name|String
 name|functionName
 parameter_list|)
+throws|throws
+name|HiveException
 block|{
+name|FunctionInfo
+name|fi
+init|=
+name|mFunctions
+operator|.
+name|get
+argument_list|(
+name|functionName
+operator|.
+name|toLowerCase
+argument_list|()
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|fi
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+operator|!
+name|fi
+operator|.
+name|isNative
+argument_list|()
+condition|)
 name|mFunctions
 operator|.
 name|remove
@@ -3363,6 +3639,19 @@ name|toLowerCase
 argument_list|()
 argument_list|)
 expr_stmt|;
+else|else
+throw|throw
+operator|new
+name|HiveException
+argument_list|(
+literal|"Function "
+operator|+
+name|functionName
+operator|+
+literal|" is hive native, it can't be dropped"
+argument_list|)
+throw|;
+block|}
 block|}
 specifier|public
 specifier|static
