@@ -101,6 +101,24 @@ name|hive
 operator|.
 name|ql
 operator|.
+name|metadata
+operator|.
+name|HiveException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
 name|plan
 operator|.
 name|FunctionWork
@@ -378,7 +396,7 @@ condition|)
 block|{
 name|FunctionRegistry
 operator|.
-name|registerUDF
+name|registerTemporaryUDF
 argument_list|(
 name|createFunctionDesc
 operator|.
@@ -421,7 +439,7 @@ condition|)
 block|{
 name|FunctionRegistry
 operator|.
-name|registerGenericUDF
+name|registerTemporaryGenericUDF
 argument_list|(
 name|createFunctionDesc
 operator|.
@@ -458,7 +476,7 @@ condition|)
 block|{
 name|FunctionRegistry
 operator|.
-name|registerUDAF
+name|registerTemporaryUDAF
 argument_list|(
 name|createFunctionDesc
 operator|.
@@ -495,7 +513,7 @@ condition|)
 block|{
 name|FunctionRegistry
 operator|.
-name|registerGenericUDAF
+name|registerTemporaryGenericUDAF
 argument_list|(
 name|createFunctionDesc
 operator|.
@@ -556,9 +574,11 @@ name|dropFunctionDesc
 name|dropFunctionDesc
 parameter_list|)
 block|{
+try|try
+block|{
 name|FunctionRegistry
 operator|.
-name|unregisterUDF
+name|unregisterTemporaryUDF
 argument_list|(
 name|dropFunctionDesc
 operator|.
@@ -569,6 +589,31 @@ expr_stmt|;
 return|return
 literal|0
 return|;
+block|}
+catch|catch
+parameter_list|(
+name|HiveException
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"drop function: "
+operator|+
+name|StringUtils
+operator|.
+name|stringifyException
+argument_list|(
+name|e
+argument_list|)
+argument_list|)
+expr_stmt|;
+return|return
+literal|1
+return|;
+block|}
 block|}
 annotation|@
 name|SuppressWarnings
