@@ -1,0 +1,1 @@
+DROP TEMPORARY FUNCTION max;
